REGRESSION(278498@main) [Skia] getUserMedia(deviceID) frequently freezing in media stream tests under debug https://bugs.webkit.org/show_bug.cgi?id=275165

Reviewed by Philippe Normand.

Why don't know why this only happens with Skia, but the problem is the
emit frame timer running every 33ms doesn't allow other sources with the
same or lower priority to run. We can change the priority to make sure
run loop dispatcher sources are higher priority.

* Source/WebCore/platform/mock/MockRealtimeVideoSource.cpp:

Canonical link: https://commits.webkit.org/280450@main